--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -62,9 +62,10 @@
     </div>
     <br/>
     <br/>
+    <div class="container-wrapper">
     <div class="container">
       <div class="row">
-        <div class="col-6">
+        <div class="col-6 d-none d-sm-block">
           <img
             src="images/yoga.png"
             class="img-fluid"alt="Yoga picture"
@@ -82,13 +83,12 @@
             <br/>
             <br/>
             <br/>
-              <a href="" class="yoga-app"title="Yoga project">Launch Yoga App</a>
-            
+              <a href="#" class="app-link"title="Yoga project">Launch Yoga App</a>
             </p>
           </div>
         </div>
       </div>
-          <div class="row">
+          <div class="row"> 
             <div class="col-6">
                 <div class="home-paragraph">
                     <p>
@@ -101,19 +101,20 @@
                     <br/>
                     <br/>
                     <br/>
-                      <a href="" class="weather-app"title="Weather project">Launch Weather App</a>
+                      <a href="#" class="app-link"title="Weather project">Launch Weather App</a>
                   </p>
                   </div>
-            </div>
-            <div class="col-6">
+                </div>
+            <div class="col-6 d-none d-sm-block">
                 <img
                   src="images/weather.png"
                   class="img-fluid" alt="Weather picture"
                 />
-              </div>
+                </div>
+              
     </div>
     <div class="row">
-        <div class="col-6">
+        <div class="col-6 d-none d-sm-block">
           <img
             src="images/yogurt.png"
             class="img-fluid" alt="Yogurt picture"
@@ -131,11 +132,12 @@
             <br/>
             <br/>
             <br/>
-              <a href="" class="yogurt-app"title="Yogurt project">Launch Yogurt App</a>
+              <a href="#" class="app-link"title="Yogurt project">Launch Yogurt App</a>
           </p>
           </div>
         </div>
       </div>
+    </div>
     </div>
   </body>
 </html>
